<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">헬로 캣</string>
    <string name="facebook_app_id">227971844042882</string>
    <string name="google_api_key">AIzaSyCpI6_5iLozb1PdIk12NU-9x4Azp5DDSLQ</string>
    <string name="google_places_api_key">AIzaSyAzi4CMHS8G_M-76o2VisVMk2MCSOCfjUM</string>
    <string name="blank"></string>
    <string name="s_people">%s명</string>
    <string name="s_hour">%s시</string>
    <string name="s_hour_long">%s시간</string>
    <string name="s_minute">%s분</string>
    <string name="s_second">%s초</string>
    <string name="error_field_required">값을 입력해 주세요.</string>
    <string name="search">검색</string>
    <string name="action_search">검색</string>
    <string name="no_search_result">검색 결과가 없습니다.</string>
    <string name="create_an_account">계정 만들기</string>
    <string name="delete_my_account">계정 삭제</string>
    <string name="search_password_help">계정을 만들 때 사용한 이메일 주소를 입력해 주세요. 입력하신 이메일로 비밀번호 정보를 전송해 드립니다.</string>
    <string name="secede_help">계정을 삭제하시면 회원정보를 포함한 모든 데이터가 삭제되고 다시는 복구할 수 없습니다.</string>
    <string name="account_is_created">계정이 생성되었습니다.</string>
    <string name="sure_to_delete_an_account">계정을 삭제하시겠습니까?</string>
    <string name="account_is_deleted">계정이 삭제되었습니다.</string>
    <string name="google_plus">구글 플러스</string>
    <string name="google_play_service_is_not_available">구글 플레이 서비스를 이용할 수 없습니다.</string>
    <string name="getting_google_user_information_is_failed">구글 사용자 정보를 가져올 수 없습니다.</string>
    <string name="article">글</string>
    <string name="me">나</string>
    <string name="input_content">내용을 입력해 주세요.</string>
    <string name="on_processing_please_wait">네트워크 요청을 처리중입니다. 잠시 기다려 주세요.</string>
    <string name="error_network_request">네트워크 요청이 정상적으로 처리되지 않았습니다.</string>
    <string name="next">다음</string>
    <string name="go_to_the_next">다음으로</string>
    <string name="replies">댓글</string>
    <string name="title_activity_reply">댓글</string>
    <string name="input_reply">댓글을 입력해 주세요.</string>
    <string name="reply">댓글쓰기</string>
    <string name="loading_data">데이터 불러오는 중&#8230;</string>
    <string name="action_navigation_back">뒤로가기</string>
    <string name="action_new">등록</string>
    <string name="register">등록</string>
    <string name="registering">등록 중&#8230;</string>
    <string name="registered">등록되었습니다.</string>
    <string name="no_registered_article">등록된 데이터가 없습니다.</string>
    <string name="no_registered_replies">등록된 댓글이 없습니다. 아래 등록 폼을 이용해서 첫번째 댓글 등록자가 되어 보세요.</string>
    <string name="registered_short">등록됨</string>
    <string name="login">로그인</string>
    <string name="logout">로그 아웃</string>
    <string name="background_photo">배경사진</string>
    <string name="loading_background_photo">배경사진 불러오는 중&#8230;</string>
    <string name="change_background_photo">배경사진 변경</string>
    <string name="change">변경하기</string>
    <string name="changed">변경되었습니다.</string>
    <string name="sure_to_report">부적절한 내용으로 신고하시겠습니까?</string>
    <string name="password">비밀번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="search_password">비밀번호 찾기</string>
    <string name="fogot_password">비밀번호를 잊으셨나요?</string>
    <string name="password_has_been_sent_via_email">비밀번호가 이메일로 전송되었습니다.</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="error_input_password_more_than_4">비밀번호를 4자 이상 입력해 주세요.</string>
    <string name="error_input_password">비밀번호를 입력해 주세요.</string>
    <string name="error_invalid_password">비밀번호가 일치하지 않습니다.</string>
    <string name="error_input_confirm_password">비밀번호를 한번 더 입력해 주세요.</string>
    <string name="error_input_same_password_with_confirm_password">비밀번호와 비밀번호 확인을 똑같이 입력해 주세요.</string>
    <string name="photo">사진</string>
    <string name="change_photo">사진 변경</string>
    <string name="select_photo">사진 선택</string>
    <string name="choose_photo">사진 선택</string>
    <string name="uploading_file_help">사진 파일을 업로드 중입니다. 파일의 크기에 따라 업로드 시간이 오래 걸릴 수 있습니다. 기다려 주세요.</string>
    <string name="delete">삭제</string>
    <string name="action_discard">삭제</string>
    <string name="deleting">삭제 중&#8230;</string>
    <string name="deleted">삭제되었습니다.</string>
    <string name="this_is_a_deleted_article_by_writer">작성자에 의해 삭제된 글입니다.</string>
    <string name="delete_long">삭제하기</string>
    <string name="sure_to_delete">삭제할까요?</string>
    <string name="new_password">새 비밀번호</string>
    <string name="error_input_new_password">새 비밀번호를 입력해 주세요.</string>
    <string name="confirm_new_password">새 비밀번호 확인</string>
    <string name="error_input_confirm_new_password">새 비밀번호를 한번 더 입력해 주세요.</string>
    <string name="error_different_new_password_with_confirm_new_password">새 비밀번호와 새 비밀번호 확인을 똑같이 입력해 주세요.</string>
    <string name="refresh">새로고침</string>
    <string name="action_refresh">새로고침</string>
    <string name="error_server_api_call">서버 API 요청이 실패했습니다.</string>
    <string name="error_json_response">서버 응답결과가 정상적이지 않습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="select">선택</string>
    <string name="finish_selecting">선택 완료</string>
    <string name="select_long">선택하기</string>
    <string name="no_selected">선택된 항목이 없습니다.</string>
    <string name="sure_to_delete_selected">선택한 항목을 삭제할까요?</string>
    <string name="settings">설정</string>
    <string name="loading_settings">설정 불러오는 중&#8230;</string>
    <string name="finish_settings">설정 완료</string>
    <string name="finish_settings_long">설정 완료하기</string>
    <string name="action_edit">편집</string>
    <string name="modify">수정</string>
    <string name="modify_long">수정하기</string>
    <string name="modified">수정되었습니다.</string>
    <string name="report_hint">신고하실 내용을 입력해 주세요.</string>
    <string name="report">신고하기</string>
    <string name="report_is_registered">신고가 등록되었습니다.</string>
    <string name="dislike">싫어요</string>
    <string name="no">아니요</string>
    <string name="error">에러</string>
    <string name="yes">예</string>
    <string name="error_occured">에러가 발생했습니다.</string>
    <string name="name">이름</string>
    <string name="input_name_or_email">이름 또는 이메일을 입력해 주세요.</string>
    <string name="input_name">이름을 입력해 주세요.</string>
    <string name="email">이메일</string>
    <string name="send_email">이메일 전송하기</string>
    <string name="error_input_name">이름을 입력해 주세요.</string>
    <string name="error_input_name_more_than_2">이름을 2글자 이상 입력해 주세요.</string>
    <string name="error_input_email">이메일을 입력해 주세요.</string>
    <string name="error_invalid_email">이메일 주소를 정확히 입력해 주세요.</string>
    <string name="check_internet_connection">인터넷 연결을 확인해 주세요.</string>
    <string name="wait_a_second">잠시 기다려 주세요.</string>
    <string name="send">전송</string>
    <string name="save">저장</string>
    <string name="saving">저장 중&#8230;</string>
    <string name="save_long">저장하기</string>
    <string name="all">전체</string>
    <string name="finish">종료</string>
    <string name="like">좋아요</string>
    <string name="progressing">처리중&#8230;</string>
    <string name="try_again_later">잠시 후 다시 시도해 주세요.</string>
    <string name="cancel">취소</string>
    <string name="action_cancel">취소</string>
    <string name="cancelled">취소되었습니다.</string>
    <string name="reset">초기화</string>
    <string name="friend">친구</string>
    <string name="edit">편집</string>
    <string name="profile_photo">프로필 사진</string>
    <string name="change_profile_photo">프로필 사진 변경</string>
    <string name="facebook">페이스북</string>
    <string name="failed_to_get_facebook_email">페이스북 이메일 정보를 가져오는 데 실패했습니다.</string>
    <string name="rate_and_review">평가 및 리뷰</string>
    <string name="failed_to_regist_gcm_id">푸쉬 서비스 이용을 위한 구글 클라우드 메세징 서비스 등록에 실패했습니다.</string>
    <string name="loading_profile_photo">프로필 사진 불러오는 중&#8230;</string>
    <string name="confirm">확인</string>
    <string name="action_accept">확인</string>
    <string name="dismiss">해제</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="error_input_current_password">현재 비밀번호를 입력해 주세요.</string>
    <string name="home">홈</string>
    <string name="member_search">회원 검색</string>
    <string name="edit_profile">회원정보 수정</string>
    <string name="if_you_are_a_new_user_create_an_account">회원으로 가입하세요.</string>
    <string name="login_using_activity">Login using Activity</string>
    <string name="login_using_custom_fragment">Login using Custom Fragment</string>
    <string name="login_using_usersettingsfragment">Login using UserSettingsFragment</string>
    <string name="hello">Hello World, SessionLoginSampleActivity!</string>
    <string name="second_activity">Second Activity</string>
    <string name="instructions">Login to create a link to fetch account data</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="revoke_access_button_name">구글 로그아웃</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="change_locale">Change Locale</string>
    <string name="list_moments_title">Touch a moment to delete</string>
    <string name="send_interactive_button_name">Send Interactive Post</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="share_title">Prefill Text (optional)</string>
    <string name="share_prefill_text">Welcome to the Google+ platform.</string>
    <string name="default_status" />
    <string name="greeting_status">Welcome, %s.</string>
    <string name="greeting_status_sign_in_required">Sign-in required</string>
    <string name="greeting_status_error">Error signing in: %s.</string>
    <string name="loading_status">Loading…</string>
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="signed_in_status">Signed in as \"%s\".</string>
    <string name="unknown_person">Unknown</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="revoke_access_status">Revoked access.</string>
    <string name="revoke_access_error_status">Unable to revoke access.</string>
    <string name="plus_write_moment_status">Saving moment</string>
    <string name="plus_remove_moment_status">Removing moment</string>
    <string name="plus_one_small_name">Small +1 button</string>
    <string name="plus_one_medium_name">Medium +1 button</string>
    <string name="plus_one_tall_name">Tall +1 button</string>
    <string name="plus_one_standard_name">Standard +1 button</string>
    <string name="plus_one_standard_ann_name">Standard +1 button (with inline annotation)</string>
    <string name="plus_example_deep_link_id">/+/mobile/android/</string>
    <string name="plus_example_deep_link_url">https://developers.google.com/+/mobile/android/</string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
</resources>