<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_round_orange"
            android:hint="@string/current_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/blank" />

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_vertical_offset"
            android:background="@drawable/edittext_round_orange"
            android:hint="@string/new_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/blank" />

        <EditText
            android:id="@+id/etPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_vertical_offset"
            android:background="@drawable/edittext_round_orange"
            android:hint="@string/confirm_new_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/blank" />

        <Button
            android:id="@+id/btChangePasswordSubmit"
            style="@style/buttonPrimary"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:text="@string/change" />
    </LinearLayout>

</ScrollView>