<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <ScrollView
        android:id="@+id/layoutForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etKeyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_round_orange"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_round_orange"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_round_orange"
                android:hint="@string/new_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/blank" />

            <Button
                android:id="@+id/btSubmit"
                style="@style/buttonPrimary"
                android:layout_width="fill_parent"
                android:layout_height="42dp"
                android:layout_marginTop="14dp"
                android:text="@string/create_an_account" />
        </LinearLayout>
    </ScrollView>

</merge>