<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <ScrollView
        android:id="@+id/layoutForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/tvReviewListHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secede_help" />

            <EditText
                android:id="@+id/etKeyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/edittext_round_readonly"
                android:inputType="text"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_round_readonly"
                android:inputType="textEmailAddress"
                android:text="@string/blank" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/edittext_round_orange"
                android:hint="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/blank"
                android:visibility="gone" />

            <Button
                android:id="@+id/btSubmit"
                style="@style/buttonDanger"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginTop="14dp"
                android:text="@string/delete_my_account" />
        </LinearLayout>
    </ScrollView>

</merge>